--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:title" content="KIXEYE.com">
 		<meta property="og:description" content="KIXEYE - A leading gaming developer making games for gamers by gamers. Hit titles include Battle Pirates, War Commander and VEGA Conflict.">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://www.kixeye.com/modules/footer/images/logo.png">
+		<meta property="og:image" content="https://www.kixeye.com/modules/footer/images/logo.png/ef7094f0341f9752d8ec16807b7f6bd4da4cfe20">
 		<meta property="og:url" content="https://www.kixeye.com">
 		<meta name="description" content="KIXEYE - A leading gaming developer making games for gamers by gamers. Hit titles include Battle Pirates, War Commander and VEGA Conflict.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
