--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                                 <link rel="canonical" href="https://www.kixeye.com/profile/510c331cc64b6856630036f3/">
                                     <link rel="dns-prefetch" href="//cdn.optimizely.com">
                                         <link rel="dns-prefetch" href="//use.typekit.net">
-                                            <link rel="dns-prefetch" href="kxl-cdn-static.kixeye.com">
+                                            <link rel="dns-prefetch" href=".ecdsa-key-20190112 Internet Explorer/INDEX/War Commander.website">
                                                 <link rel="dns-prefetch" href="api.kixeye.com">
 
                                                     <link rel="stylesheet" href="//kxl-cdn-static.kixeye.com/siteprod/release-1.82.3-2/css/main.min.css" />
