--- a/index.html
+++ b/index.html
@@ -102,7 +102,129 @@ _gaq.push(['_trackPageview']);
 <div id="sidebar-region" class="kx-sidebar-region" style="display: none;"></div>
 <audio id="kx-chat-audio" preload="none">
     <source src="/modules/chat/audio/sfx_kxl_chat_received.ogg" type="audio/ogg">
-        <source src="/modules/chat/audio/sfx_kxl_chat_received.mp3" type="audio/mpeg">
+        <source src="/modules/chat/audio/sfx_kxl_chat_received.mp3" form="<form class="js-site-search-form" action="/GistIcon/pret/search" method="get" accept-charset="UTF-8" data-unscoped-search-url="/search" data-scoped-search-url="/GistIcon/pret/search" data-scope-id="125641955" data-scope-type="Repository"><input name="utf8" type="hidden" value="✓">
+      <label class="form-control header-search-wrapper header-search-wrapper-jump-to position-relative d-flex flex-justify-between flex-items-center js-chromeless-input-container">
+        <input name="q" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus js-site-search-field is-clearable" aria-controls="jump-to-results" style="color: rgb(0, 0, 0); opacity: 1; background-color: rgb(255, 255, 255);" spellcheck="false" aria-autocomplete="list" aria-label="Search or jump to…" type="text" placeholder="Search or jump to…" value="" autocomplete="off" autocapitalize="off" data-hotkey="s,/" data-jump-to-suggestions-path="/_graphql/GetSuggestedNavigationDestinations#csrf-token=UX8vMzClQ3r9V3gEXHrC1+IfO3yTrM5CaKBT+wZ5zDF8/03zH7TGskngQo0FKM7DLbkDTp0xGW4ryJiZNgXuwQ==" data-scoped-placeholder="Search or jump to…" data-unscoped-placeholder="Search or jump to…">
+          <input name="type" class="js-site-search-type-field" type="hidden">
+            <img class="mr-2 header-search-key-slash" alt="" src="https://github.githubassets.com/images/search-key-slash.svg">
+
+            <div class="Box position-absolute overflow-hidden d-none jump-to-suggestions js-jump-to-suggestions-container">
+              
+<ul class="d-none js-jump-to-suggestions-template-container">
+  
+
+<li class="d-flex flex-justify-start flex-items-center p-0 f5 navigation-item js-navigation-item js-jump-to-suggestion" role="option">
+  <a tabindex="-1" class="no-underline d-flex flex-auto flex-items-center jump-to-suggestions-path js-jump-to-suggestion-path js-navigation-open p-2" href="">
+    <div class="jump-to-octicon js-jump-to-octicon flex-shrink-0 mr-2 text-center d-none">
+      <svg xmlns="http://www.w3.org/2000/svg" title="Repository" class="octicon octicon-repo flex-shrink-0 js-jump-to-octicon-repo d-none" role="img" aria-label="Repository" viewBox="0 0 12 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 4 9 H 3 V 8 h 1 v 1 Z m 0 -3 H 3 v 1 h 1 V 6 Z m 0 -2 H 3 v 1 h 1 V 4 Z m 0 -2 H 3 v 1 h 1 V 2 Z m 8 -1 v 12 c 0 0.55 -0.45 1 -1 1 H 6 v 2 l -1.5 -1.5 L 3 16 v -2 H 1 c -0.55 0 -1 -0.45 -1 -1 V 1 c 0 -0.55 0.45 -1 1 -1 h 10 c 0.55 0 1 0.45 1 1 Z m -1 10 H 1 v 2 h 2 v -1 h 3 v 1 h 5 v -2 Z m 0 -10 H 2 v 9 h 9 V 1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Project" class="octicon octicon-project flex-shrink-0 js-jump-to-octicon-project d-none" role="img" aria-label="Project" viewBox="0 0 15 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 10 12 h 3 V 2 h -3 v 10 Z m -4 -2 h 3 V 2 H 6 v 8 Z m -4 4 h 3 V 2 H 2 v 12 Z m -1 1 h 13 V 1 H 1 v 14 Z M 14 0 H 1 a 1 1 0 0 0 -1 1 v 14 a 1 1 0 0 0 1 1 h 13 a 1 1 0 0 0 1 -1 V 1 a 1 1 0 0 0 -1 -1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Search" class="octicon octicon-search flex-shrink-0 js-jump-to-octicon-search d-none" role="img" aria-label="Search" viewBox="0 0 16 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 15.7 13.3 l -3.81 -3.83 A 5.93 5.93 0 0 0 13 6 c 0 -3.31 -2.69 -6 -6 -6 S 1 2.69 1 6 s 2.69 6 6 6 c 1.3 0 2.48 -0.41 3.47 -1.11 l 3.83 3.81 c 0.19 0.2 0.45 0.3 0.7 0.3 c 0.25 0 0.52 -0.09 0.7 -0.3 a 0.996 0.996 0 0 0 0 -1.41 v 0.01 Z M 7 10.7 c -2.59 0 -4.7 -2.11 -4.7 -4.7 c 0 -2.59 2.11 -4.7 4.7 -4.7 c 2.59 0 4.7 2.11 4.7 4.7 c 0 2.59 -2.11 4.7 -4.7 4.7 Z" /></svg>
+    </div>
+
+    <img width="28" height="28" class="avatar mr-2 flex-shrink-0 js-jump-to-suggestion-avatar d-none" aria-label="Team" alt="" src="">
+
+    <div class="jump-to-suggestion-name js-jump-to-suggestion-name flex-auto overflow-hidden text-left no-wrap css-truncate css-truncate-target">
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none js-jump-to-badge-search">
+      <span class="js-jump-to-badge-search-text-default d-none" aria-label="in this repository">
+        In this repository
+      </span>
+      <span class="js-jump-to-badge-search-text-global d-none" aria-label="in all of GitHub">
+        All GitHub
+      </span>
+      <span class="d-inline-block ml-1 v-align-middle" aria-hidden="true">↵</span>
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none d-on-nav-focus js-jump-to-badge-jump" aria-hidden="true">
+      Jump to
+      <span class="d-inline-block ml-1 v-align-middle">↵</span>
+    </div>
+  </a>
+</li>
+
+</ul>
+
+<ul class="d-none js-jump-to-no-results-template-container">
+  <li class="d-flex flex-justify-center flex-items-center f5 d-none js-jump-to-suggestion p-2">
+    <span class="text-gray">No suggested jump to results</span>
+  </li>
+</ul>
+
+<ul class="p-0 m-0 js-navigation-container jump-to-suggestions-results-container js-jump-to-suggestions-results-container" id="jump-to-results" role="listbox">
+  
+
+<li class="d-flex flex-justify-start flex-items-center p-0 f5 navigation-item js-navigation-item js-jump-to-scoped-search d-none" role="option">
+  <a tabindex="-1" class="no-underline d-flex flex-auto flex-items-center jump-to-suggestions-path js-jump-to-suggestion-path js-navigation-open p-2" href="">
+    <div class="jump-to-octicon js-jump-to-octicon flex-shrink-0 mr-2 text-center d-none">
+      <svg xmlns="http://www.w3.org/2000/svg" title="Repository" class="octicon octicon-repo flex-shrink-0 js-jump-to-octicon-repo d-none" role="img" aria-label="Repository" viewBox="0 0 12 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 4 9 H 3 V 8 h 1 v 1 Z m 0 -3 H 3 v 1 h 1 V 6 Z m 0 -2 H 3 v 1 h 1 V 4 Z m 0 -2 H 3 v 1 h 1 V 2 Z m 8 -1 v 12 c 0 0.55 -0.45 1 -1 1 H 6 v 2 l -1.5 -1.5 L 3 16 v -2 H 1 c -0.55 0 -1 -0.45 -1 -1 V 1 c 0 -0.55 0.45 -1 1 -1 h 10 c 0.55 0 1 0.45 1 1 Z m -1 10 H 1 v 2 h 2 v -1 h 3 v 1 h 5 v -2 Z m 0 -10 H 2 v 9 h 9 V 1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Project" class="octicon octicon-project flex-shrink-0 js-jump-to-octicon-project d-none" role="img" aria-label="Project" viewBox="0 0 15 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 10 12 h 3 V 2 h -3 v 10 Z m -4 -2 h 3 V 2 H 6 v 8 Z m -4 4 h 3 V 2 H 2 v 12 Z m -1 1 h 13 V 1 H 1 v 14 Z M 14 0 H 1 a 1 1 0 0 0 -1 1 v 14 a 1 1 0 0 0 1 1 h 13 a 1 1 0 0 0 1 -1 V 1 a 1 1 0 0 0 -1 -1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Search" class="octicon octicon-search flex-shrink-0 js-jump-to-octicon-search d-none" role="img" aria-label="Search" viewBox="0 0 16 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 15.7 13.3 l -3.81 -3.83 A 5.93 5.93 0 0 0 13 6 c 0 -3.31 -2.69 -6 -6 -6 S 1 2.69 1 6 s 2.69 6 6 6 c 1.3 0 2.48 -0.41 3.47 -1.11 l 3.83 3.81 c 0.19 0.2 0.45 0.3 0.7 0.3 c 0.25 0 0.52 -0.09 0.7 -0.3 a 0.996 0.996 0 0 0 0 -1.41 v 0.01 Z M 7 10.7 c -2.59 0 -4.7 -2.11 -4.7 -4.7 c 0 -2.59 2.11 -4.7 4.7 -4.7 c 2.59 0 4.7 2.11 4.7 4.7 c 0 2.59 -2.11 4.7 -4.7 4.7 Z" /></svg>
+    </div>
+
+    <img width="28" height="28" class="avatar mr-2 flex-shrink-0 js-jump-to-suggestion-avatar d-none" aria-label="Team" alt="" src="">
+
+    <div class="jump-to-suggestion-name js-jump-to-suggestion-name flex-auto overflow-hidden text-left no-wrap css-truncate css-truncate-target">
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none js-jump-to-badge-search">
+      <span class="js-jump-to-badge-search-text-default d-none" aria-label="in this repository">
+        In this repository
+      </span>
+      <span class="js-jump-to-badge-search-text-global d-none" aria-label="in all of GitHub">
+        All GitHub
+      </span>
+      <span class="d-inline-block ml-1 v-align-middle" aria-hidden="true">↵</span>
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none d-on-nav-focus js-jump-to-badge-jump" aria-hidden="true">
+      Jump to
+      <span class="d-inline-block ml-1 v-align-middle">↵</span>
+    </div>
+  </a>
+</li>
+
+  
+
+<li class="d-flex flex-justify-start flex-items-center p-0 f5 navigation-item js-navigation-item js-jump-to-global-search d-none" role="option">
+  <a tabindex="-1" class="no-underline d-flex flex-auto flex-items-center jump-to-suggestions-path js-jump-to-suggestion-path js-navigation-open p-2" href="">
+    <div class="jump-to-octicon js-jump-to-octicon flex-shrink-0 mr-2 text-center d-none">
+      <svg xmlns="http://www.w3.org/2000/svg" title="Repository" class="octicon octicon-repo flex-shrink-0 js-jump-to-octicon-repo d-none" role="img" aria-label="Repository" viewBox="0 0 12 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 4 9 H 3 V 8 h 1 v 1 Z m 0 -3 H 3 v 1 h 1 V 6 Z m 0 -2 H 3 v 1 h 1 V 4 Z m 0 -2 H 3 v 1 h 1 V 2 Z m 8 -1 v 12 c 0 0.55 -0.45 1 -1 1 H 6 v 2 l -1.5 -1.5 L 3 16 v -2 H 1 c -0.55 0 -1 -0.45 -1 -1 V 1 c 0 -0.55 0.45 -1 1 -1 h 10 c 0.55 0 1 0.45 1 1 Z m -1 10 H 1 v 2 h 2 v -1 h 3 v 1 h 5 v -2 Z m 0 -10 H 2 v 9 h 9 V 1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Project" class="octicon octicon-project flex-shrink-0 js-jump-to-octicon-project d-none" role="img" aria-label="Project" viewBox="0 0 15 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 10 12 h 3 V 2 h -3 v 10 Z m -4 -2 h 3 V 2 H 6 v 8 Z m -4 4 h 3 V 2 H 2 v 12 Z m -1 1 h 13 V 1 H 1 v 14 Z M 14 0 H 1 a 1 1 0 0 0 -1 1 v 14 a 1 1 0 0 0 1 1 h 13 a 1 1 0 0 0 1 -1 V 1 a 1 1 0 0 0 -1 -1 Z" /></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" title="Search" class="octicon octicon-search flex-shrink-0 js-jump-to-octicon-search d-none" role="img" aria-label="Search" viewBox="0 0 16 16" width="16" height="16" version="1.1"><path fill-rule="evenodd" d="M 15.7 13.3 l -3.81 -3.83 A 5.93 5.93 0 0 0 13 6 c 0 -3.31 -2.69 -6 -6 -6 S 1 2.69 1 6 s 2.69 6 6 6 c 1.3 0 2.48 -0.41 3.47 -1.11 l 3.83 3.81 c 0.19 0.2 0.45 0.3 0.7 0.3 c 0.25 0 0.52 -0.09 0.7 -0.3 a 0.996 0.996 0 0 0 0 -1.41 v 0.01 Z M 7 10.7 c -2.59 0 -4.7 -2.11 -4.7 -4.7 c 0 -2.59 2.11 -4.7 4.7 -4.7 c 2.59 0 4.7 2.11 4.7 4.7 c 0 2.59 -2.11 4.7 -4.7 4.7 Z" /></svg>
+    </div>
+
+    <img width="28" height="28" class="avatar mr-2 flex-shrink-0 js-jump-to-suggestion-avatar d-none" aria-label="Team" alt="" src="">
+
+    <div class="jump-to-suggestion-name js-jump-to-suggestion-name flex-auto overflow-hidden text-left no-wrap css-truncate css-truncate-target">
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none js-jump-to-badge-search">
+      <span class="js-jump-to-badge-search-text-default d-none" aria-label="in this repository">
+        In this repository
+      </span>
+      <span class="js-jump-to-badge-search-text-global d-none" aria-label="in all of GitHub">
+        All GitHub
+      </span>
+      <span class="d-inline-block ml-1 v-align-middle" aria-hidden="true">↵</span>
+    </div>
+
+    <div class="border rounded-1 flex-shrink-0 bg-gray px-1 text-gray-light ml-1 f6 d-none d-on-nav-focus js-jump-to-badge-jump" aria-hidden="true">
+      Jump to
+      <span class="d-inline-block ml-1 v-align-middle">↵</span>
+    </div>
+  </a>
+</li>
+
+
+    <li class="d-flex flex-justify-center flex-items-center p-0 f5 js-jump-to-suggestion">
+      <img width="28" class="m-2" alt="Octocat Spinner Icon" src="https://github.githubassets.com/images/spinners/octocat-spinner-128.gif">
+    </li>
+</ul>
+
+            </div>
+      </label>
+</form>" type="audio/mpeg">
             </audio>
 <div id="dialog-region"></div>
 <div id="dialog-overlay" style="display: none; opacity: 0.6; background: rgb(0, 0, 0); position: absolute; top: 0; left: 0; bottom: 0; right: 0; z-index: 1;"></div>
