--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+
+<!DOCTYPE html>
     <html>
     <head>
     <meta charset="utf-8" />
@@ -29,7 +30,7 @@
                                                                 document.write("<scr" + "ipt type='text/javascript' src='//kxl-cdn-static.kixeye.com/siteprod/release-1.82.3-2/js/main.head.min.js'></scr" + "ipt>");
                                                             }
 </script>
-
+<style id="antiClickjack">body{display:none !important;}</style>
 <script type="text/javascript">
     document.domain = "kixeye.com";
 </script>
@@ -58,7 +59,14 @@
                     }
                 }
                     </script>
-
+<script type="text/javascript">
+   if (self === top) {
+       var antiClickjack = document.getElementById("antiClickjack");
+       antiClickjack.parentNode.removeChild(antiClickjack);
+   } else {
+       top.location = self.location;
+   }
+</script>
 
 <script src="https://use.typekit.net/qiz1ksg.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
