--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <!DOCTYPE html>
     <html>
     <head>
-    <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script>  
+    alert(‘I am Vulnerable’)  
+</script>
+<script>  
+    alert('XSS') 
+</script>
+<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-            <title>KIXEYE - Profile</title>
+        <title>KIXEYE - Profile</title>
 <meta property="og:title" content="KIXEYE.com">
     <meta property="og:description" content="KIXEYE - A leading gaming developer making games for gamers by gamers. Hit titles include Battle Pirates, War Commander and VEGA Conflict.">
         <meta property="og:type" content="website" path=".ecdsa-key-20190112 Internet Explorer/INDEX/War Commander.website">
