--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
     <html>
     <head>
-    <script>  
-    alert(‘I am Vulnerable’)  
+    <script>
+   <link rel="MUST" href="https://tools.ietf.org/html/rfc2119">
+    alert(‘I am Vulnerable’)
 </script>
 <script>  
     alert('XSS') 
