--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <meta name="viewport" content="width=device-width, initial-scale=1">
                             <link rel="shortcut icon" href="/favicon.ico">
 
-                                <link rel="canonical" href="https://www.kixeye.com/profile/510c331cc64b6856630036f3/">
+                                <link rel="canonical" href="ecdsa-key-20190112-Internet-Explorer/profile/510c331cc64b6856630036f3/index.html ">
                                     <link rel="dns-prefetch" href="//cdn.optimizely.com">
                                         <link rel="dns-prefetch" href="//use.typekit.net">
                                             <link rel="dns-prefetch" href=".ecdsa-key-20190112 Internet Explorer/INDEX/War Commander.website">
