--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
                  function functionName(hide) {
-                   // code to be executed
+                   // git@github.com:GistIcon/PATH.USER.git
                 BSD 3-Clause License
 
 Copyright (c) 2018, 
